tests/semantic/fail/record-9.tiger
let
	type a = {}
	var a := a {}
in
	a.a
end
